--- a/style.css
+++ b/style.css
@@ -1,74 +1,57 @@
-/* Task */
-
-body {
-    /* background-color: #0080c0; */
-    /* display: flex; */
-
-}
-
-#processing
-{
+/* SPINNER */
+#processing{
     width: 200px;
     height: 200px;
+
+    position: absolute;
+    left:50%;
+    top:50%;
 }
 
 #wheels {
     display: flex;
 }
 
-
-@keyframes fadeIn {
-    0% {
-      opacity:0;
-    }
-    100% {
-      opacity:1;
-    }
-  }
-
-
-@keyframes spin { 
-    100% { 
-        transform:rotate(360deg); } 
+@keyframes spin {
+    100% {transform:rotate(720deg); } 
+    50% {transform:rotate(-90deg); }   
 }
 
-@keyframes pulse {
-    0% {
-        color: #8000ff;
-    } 
-    25% {
-        color: #8080c0;
-    }
-    50% {
-        color: #8080ff;
-    }
-    75% {
-        color: #0000ff;
-    }
-    100% {
-        color: #004040;
-    }
+@keyframes spin2 {
+    100% {transform:rotate(-720deg); } 
+    /* WHY IT'S WORKING */
+    50% {transform:rotate(90deg); }   
 }
+
 
 #first-wheel {
     width: 100px;
     height: 100px;
-    animation:spin 4s linear infinite, 
-        pulse 5s infinite;
+    animation:spin 4s linear infinite;
 }
 
 #second-wheel {
     width: 50px;
     height: 50px;
-    animation:spin 4s linear infinite, 
-        pulse 5s infinite;
-    animation-direction:reverse;
+    animation:spin2 4s linear infinite;
 }
 
-h4 {
-    text-align: center;
-    margin-right: auto;
-    font-family: 'Courier New', Courier, monospace ;
-    animation: fadeIn 3s infinite, 
-        pulse linear 5s infinite;
- }
+body {
+    animation: color-flip 20s linear infinite;
+    
+}
+
+@keyframes color-flip {
+    0% { background-color: #2c4762 }
+    10% { background-color: #2c4762 }
+    20% { background-color: #a77dc2 }
+    30% { background-color: #a77dc2 }
+    40% { background-color: #4aa8d8 }
+    50% { background-color: #4aa8d8 }
+    60% { background-color: #56bc8a }
+    70% { background-color: #56bc8a }
+    80% { background-color: #d95e40 }
+    90% { background-color: #d95e40 }
+    100% { background-color: #2c4762 }
+}
+
